--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1,38 +1,216 @@
-import pandas as pd
-import matplotlib.pyplot as plt
-
-# Load data
-df = pd.read_csv("data/sales.csv")
-
-# Basic inspection
-df.head()
-df.info()
-df.describe()
-# Convert date column
-df['date'] = pd.to_datetime(df['date'])
-# Missing values
-df.isnull().sum()
-# Monthly sales trend
-monthly_sales = df.groupby(pd.Grouper(key='date', freq='M'))['sales'].sum()
-
-plt.figure(figsize=(10,4))
-monthly_sales.plot()
-plt.title("Monthly Sales Trend")
-plt.xlabel("Date")
-plt.ylabel("Sales")
-plt.show()
-# Seasonality check
-df['month'] = df['date'].dt.month
-
-plt.figure(figsize=(8,4))
-df.groupby('month')['sales'].mean().plot(kind='bar')
-plt.title("Average Sales by Month")
-plt.xlabel("Month")
-plt.ylabel("Average Sales")
-plt.show()
-# Outlier check
-plt.figure(figsize=(6,4))
-df.boxplot(column='sales')
-plt.title("Sales Distribution")
-plt.show()
-
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Sales Data Analysis\n",
+        "## Exploratory Data Analysis on Sales Dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Import Libraries"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Load Data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load the sales data\n",
+        "df = pd.read_csv(\"data/sales.csv\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Basic Data Inspection"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Display first few rows\n",
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dataset information\n",
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Statistical summary\n",
+        "df.describe()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Data Preprocessing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Convert date column to datetime format\n",
+        "df['date'] = pd.to_datetime(df['date'])\n",
+        "\n",
+        "# Check for missing values\n",
+        "print(\"Missing values per column:\")\n",
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5. Time Series Analysis - Monthly Sales Trend"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Aggregate sales by month\n",
+        "monthly_sales = df.groupby(pd.Grouper(key='date', freq='M'))['sales'].sum()\n",
+        "\n",
+        "# Plot monthly trend\n",
+        "plt.figure(figsize=(10, 4))\n",
+        "monthly_sales.plot()\n",
+        "plt.title(\"Monthly Sales Trend\")\n",
+        "plt.xlabel(\"Date\")\n",
+        "plt.ylabel(\"Sales\")\n",
+        "plt.grid(True, alpha=0.3)\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6. Seasonality Analysis"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Extract month from date\n",
+        "df['month'] = df['date'].dt.month\n",
+        "\n",
+        "# Plot average sales by month\n",
+        "plt.figure(figsize=(8, 4))\n",
+        "df.groupby('month')['sales'].mean().plot(kind='bar')\n",
+        "plt.title(\"Average Sales by Month\")\n",
+        "plt.xlabel(\"Month\")\n",
+        "plt.ylabel(\"Average Sales\")\n",
+        "plt.xticks(rotation=0)\n",
+        "plt.grid(True, alpha=0.3, axis='y')\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 7. Outlier Detection"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Boxplot to identify outliers\n",
+        "plt.figure(figsize=(6, 4))\n",
+        "df.boxplot(column='sales')\n",
+        "plt.title(\"Sales Distribution - Outlier Check\")\n",
+        "plt.ylabel(\"Sales\")\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 8. Summary Insights\n",
+        "\n",
+        "**Key Observations:**\n",
+        "- Monthly sales trends show [describe pattern]\n",
+        "- Seasonal patterns indicate [describe seasonality]\n",
+        "- Outliers detected: [describe outliers if any]\n",
+        "\n",
+        "**Next Steps:**\n",
+        "- Feature engineering for forecasting\n",
+        "- Model building (ARIMA, Prophet, or ML models)\n",
+        "- Evaluate model performance"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 4
+}
